Add handling for resources in the classpath